objects/Minimum_Required_Documents__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                    <default>true</default>
                    <label>Applicant</label>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Asset_Statement 
Business_Tax 
Personal_Tax 
Sale_Contract 
W2 
Hazard_Insurance 
Appraisal 
Lender_Pre 
Mortgage 
Paystub 
Award</description>
        <inlineHelpText>Asset_Statement 
Business_Tax 
Personal_Tax 
Sale_Contract 
W2 
Hazard_Insurance 
Appraisal 
Lender_Pre 
Mortgage 
Paystub 
Award
Sale Contract
W2
Hazard Insurance
Appraisal
Lender Pre
Mortgage
Paystub
Award</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>W2</fullName>
                </value>
                <value>
                    <fullName>Paystubs</fullName>
                </value>
                <value>
                    <fullName>Social Security Award Letter/Pension Income</fullName>
                </value>
                <value>
                    <fullName>Personal Tax Return</fullName>
                </value>
                <value>
                    <fullName>Business Tax Return</fullName>
                </value>
                <value>
                    <fullName>Asset Statement</fullName>
                </value>
                <value>
                    <fullName>Hazard Insurance Dec Page</fullName>
                </value>
                <value>
                    <fullName>Mortgage Statements</fullName>
                </value>
                <value>
                    <fullName>Lender Pre-Qualification/ Pre-Approval</fullName>
                </value>
                <value>
                    <fullName>Fully Executed Purchase and Sale Contract</fullName>
                </value>
                <value>
                    <fullName>Appraisal Report</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Trust Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Description__c</fullName>
        <label>Customer Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Doc_Name__c</fullName>
        <description>Name of the document as uploaded by the customer</description>
        <inlineHelpText>Name of the document as uploaded by the customer</inlineHelpText>
        <label>Customer Doc Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>Asset_Statement 
Business_Tax 
Personal_Tax 
Sale_Contract 
W2 
Hazard_Insurance 
Appraisal 
Lender_Pre 
Mortgage 
Paystub 
Award</description>
        <inlineHelpText>Asset_Statement 
Business_Tax 
Personal_Tax 
Sale_Contract 
W2 
Hazard_Insurance 
Appraisal 
Lender_Pre 
Mortgage 
Paystub 
Award</inlineHelpText>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReuploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reuploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Name_Text__c</fullName>
        <formula>Lead__r.FirstName &amp; " " &amp;  Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Minimum Required Documents</relationshipLabel>
        <relationshipName>Minimum_Required_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reupload_Comments__c</fullName>
        <label>Reupload Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UW_Description__c</fullName>
        <label>UW Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Fired_Debug__c</fullName>
        <label>Workflow Fired Debug</label>
        <type>DateTime</type>
    </fields>
    <label>Minimum Required Documents</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Danilo_Test</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Danilo Test</label>
    </listViews>
    <nameField>
        <displayFormat>MRD-{000000000}</displayFormat>
        <label>Minimum Required Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minimum Required Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>